tests/samples/positive/generics/generic_enum_option.ax
module generic_enum_option;

enum Option<T>: u8 {
    none = 0,
    some(T) = 1,
}

fn score(value: Option<i32>) -> i32 {
    return match value {
        .some(x) => x + 1,
        .none => 0,
    };
}

fn main() -> i32 {
    let inferred = Option.some(41);
    let empty: Option<i32> = Option.none;
    let explicit = Option<i32>.some(9);
    let explicit_empty = Option<i32>.none;
    return score(inferred) + score(empty) + score(explicit) + score(explicit_empty) - 52;
}
